--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~40.0.0",
-    "expo-status-bar": "~1.0.3",
+    "expo": "~42.0.1",
+    "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-web": "~0.13.12",
-    "@expo/vector-icons": "^12.0.0",
-    "react-native-elements": "2.2.1"
+    "react-navigation": "^4.4.4",
+    "react-native-screens": "~3.4.0",
+    "@react-navigation/native": "^5.9.4",
+    "react-native-gesture-handler": "~1.10.2",
+    "@react-navigation/bottom-tabs": "^5.11.10",
+    "react-native-safe-area-context": "3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
